feat(api): :zap: show better error on missing field
