# systems/redoc/swagger-new.json
@@ -74,6 +74,36 @@
             }
           }
         }
+      },
+      "MissingInput": {
+        "description": "The request was missing required input",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "cause": {
+                  "type": "string",
+                  "example": "Missing Field(s)"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "neededFields": {
+                  "type": "array",
+                  "items": {
+                    "type": "string",
+                    "example": "path"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
@@ -2452,6 +2482,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -2474,6 +2507,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
@@ -2590,6 +2626,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -2620,6 +2659,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
@@ -2714,6 +2756,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -2748,6 +2793,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -2772,6 +2820,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
@@ -2887,6 +2938,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -2907,6 +2961,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
@@ -2993,6 +3050,9 @@
                           "gexpHistory": {
                             "type": "object",
                             "properties": {
+                              "2022-02-25": {
+                                "type": "number"
+                              },
                               "2022-02-24": {
                                 "type": "number"
                               },
@@ -3009,9 +3069,6 @@
                                 "type": "number"
                               },
                               "2022-02-19": {
-                                "type": "number"
-                              },
-                              "2022-02-18": {
                                 "type": "number"
                               }
                             }
@@ -3242,6 +3299,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -3293,6 +3353,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -3340,6 +3403,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
@@ -3389,6 +3455,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
+          },
           "404": {
             "$ref": "#/components/responses/MissingPage"
           }
@@ -3418,6 +3487,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/MissingInput"
           },
           "404": {
             "$ref": "#/components/responses/MissingPage"
